--- a/Hotel_Reservations_Prediction.ipynb
+++ b/Hotel_Reservations_Prediction.ipynb
@@ -2700,12 +2700,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 158,
+   "id": "fbc2aafc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap': True,\n",
+       " 'ccp_alpha': 0.0,\n",
+       " 'class_weight': None,\n",
+       " 'criterion': 'gini',\n",
+       " 'max_depth': None,\n",
+       " 'max_features': 'auto',\n",
+       " 'max_leaf_nodes': None,\n",
+       " 'max_samples': None,\n",
+       " 'min_impurity_decrease': 0.0,\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 2,\n",
+       " 'min_weight_fraction_leaf': 0.0,\n",
+       " 'n_estimators': 100,\n",
+       " 'n_jobs': -1,\n",
+       " 'oob_score': False,\n",
+       " 'random_state': None,\n",
+       " 'verbose': 1,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RF_clf.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 259,
    "id": "702715b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#assigned value to hyperparameters for testing - hyperparameter tunning\n",
+    "\n",
     "n_estimators = [20,60,100]\n",
     "max_features = ['auto', 'sqrt']\n",
     "max_depths = [60, 90, 110]\n",
@@ -3378,14 +3417,6 @@
     "\n",
     "print('Confusion Matrix : \\n' + str(confusion_matrix(y_test,RF_Grid_pred)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abc323d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
